feat: create 5.37.1 release notes

--- a/src/docs/shared/release-notes/5.37.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.1/changelog.mdx
@@ -8,15 +8,19 @@ description: See what's new in Webiny version 5.37.1.
 
 ## Page Builder
 
-### ✏️ Fixed Deletion and Unpublishing of Pages ([#3438](https://github.com/webiny/webiny-js/pull/3438))
+### Fixed Deletion and Unpublishing of Pages ([#3438](https://github.com/webiny/webiny-js/pull/3438))
 
-✏️ 
+Prior to this release, when deleting a page, it would not be fully deleted. More specifically, despite the fact that the page would not be visible in the Admin app, it would still be visible on the public website.
+
+This has now been addressed. When deleting a page, it will be fully deleted, meaning the page will no longer be visible on the public website.
 
 ## Deployments
 
-### ✏️ Fixed Deployment of Website Application With Existing VPC ([#3456](https://github.com/webiny/webiny-js/pull/3456))
+### Fixed Deployment of Website Application With Existing VPC ([#3456](https://github.com/webiny/webiny-js/pull/3456))
 
-✏️
+When deploying Webiny into [an existing VPC](/docs/{version}/enterprise/use-existing-amazon-vpc) and with [multi-tenancy](/docs/{version}/enterprise/multi-tenancy) enabled, the deployment of the Website application would fail. More specifically, the deployment of the `website-router-origin-request` Lambda@Edge function would fail, because its IAM role was missing the base [`AWSLambdaVPCAccessExecutionRole`](https://docs.aws.amazon.com/aws-managed-policy/latest/reference/AWSLambdaVPCAccessExecutionRole.html) AWS managed policy attached to it.
+
+This has now been addressed. 
 
 
 
