fix: hrader and paragraph titles, lexical words

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
@@ -24,16 +24,16 @@ Webiny uses [Lexical Rich Text Editor](https://lexical.dev/) to allow users to c
 To learn more about how Lexical Editor works before starting with the custom configuration with the Webiny, check the [official docs](https://lexical.dev/docs/intro).
 Also, check the [Lexical playground](https://playground.lexical.dev). You can find features that can be implemented into the Webiny apps.
 
-In this article we will cover the Lexical Editor configuration for the heading and paragraph elements. Configuration includes toolbar actions, plugins, and lexical nodes.
+In this article we will cover the Lexical Editor configuration for the heading and paragraph elements. The configuration includes toolbar actions, plugins, and Lexical nodes.
 
 <Gallery>
 <Image
-  title="Lexical editor in Heading element"
+  title="This is Lexical editor in the Heading element"
   src={headingElementLexicalEditor}
   style={{ width: 450 }}
 />
   <Image
-    title="Lexical editor in Paragraph element"
+    title="This is Lexical editor in the Paragraph element"
     src={paragraphElementLexicalEditor}
     style={{ width: 450 }}
   />
@@ -41,18 +41,17 @@ In this article we will cover the Lexical Editor configuration for the heading a
 
 ### Discover Toolbar Actions
 
-This section demonstrates how you can discover the names of existing toolbar actions. This is important for further sections on positioning, removing, and replacing actions.
+This section demonstrates how you can discover the names of existing toolbar actions. The easiest way to discover existing actions is to use the React Dev Tools plugins for your browser, and select the toolbar action element. From there, you can look at the Fragment key value.
 
-The easiest way to discover existing actions is to use the React Dev Tools plugins for your browser, and select the toolbar action element. From there, you can look at Fragment key value.
 <Image
   title="Discover Toolbar Actions Names"
   src={discoverToolbarActions}
   style={{ width: 450 }}
 />
 
-## Heading Element
+## The Heading Element
 
-Heading element is used for adding headings. Heading element has its own actions, plugins and nodes, which are separated from the Paragraph element.
+The Heading element is used for adding headings. The Heading element has its own actions, plugins and nodes, which are separated from the Paragraph element.
 
 ### Toolbar
 To customize the toolbar actions, you can utilize our configuration options. You have the ability to add, replace, remove, or position a toolbar action. To learn more, please refer to the topics listed below.
@@ -136,7 +135,7 @@ To remove an action, pass a `remove` prop to the `<Heading.ToolbarAction>` eleme
 ```
 
 #### Position Action
-To position existing or new custom action you can use `before` or `after` props on the `<Heading.ToolbarAction>` element:
+To position an existing or new custom action you can use `before` or `after` props on the `<Heading.ToolbarAction>` element:
 ```jsx apps/admin/src/App.tsx
 <LexicalEditorConfig>
   {/* Position your action after the font size action */}
@@ -168,11 +167,11 @@ To position existing or new custom action you can use `before` or `after` props 
 | QuoteAction | quote | Convert the selected text block to a quote. |
 
 ### Plugins
-You have the ability to add, replace, remove, or position lexical plugins. To learn more, please refer to the topics listed below.
-Please read the [official docs](https://lexical.dev/docs/react/plugins) for more information about the lexical plugins.
+You have the ability to add, replace, remove, or position Lexical plugins. To learn more, please refer to the topics listed below.
+Please read the [official docs](https://lexical.dev/docs/react/plugins) for more information about the Lexical plugins.
 
 #### Add Plugin
-To add a new lexical plugin, you need to use the `<Heading.Plugin>` component and mount it within your Admin app.
+To add a new Lexical plugin, you need to use the `<Heading.Plugin>` component and mount it within your Admin app.
 ```jsx apps/admin/src/App.tsx
 function CustomFloatingLinkEditor({
   editor,
@@ -295,16 +294,16 @@ To position existing or custom plugins you can use `before` or `after` props on 
 | QuotePlugin | quote | Format the selected text block to quote. This plugin will create quoteblock html tag.  |
 
 ### Nodes
-You have the ability to add, replace, remove, or position lexical nodes. To learn more, please refer to the topics listed below.
+You have the ability to add, replace, remove, or position Lexical nodes. To learn more, please refer to the topics listed below.
 
 <Alert type={"warning"}>
   Built-in nodes cannot be removed or replaced to avoid existing data corruption. You can only remove or replace your custom nodes, or nodes added by other 3rd party plugins.
 </Alert>
 
-Please read the [official docs](https://lexical.dev/docs/concepts/nodes) for more information about the lexical nodes.
+Please read the [official docs](https://lexical.dev/docs/concepts/nodes) for more information about the Lexical nodes.
 
 #### Add Node
-To add a new lexical node, you need to use the `<Heading.Node>` component and mount it within your Admin app. After, pass the node class via the `node` prop.
+To add a new Lexical node, you need to use the `<Heading.Node>` component and mount it within your Admin app. After, pass the node class via the `node` prop.
 ```jsx apps/admin/src/App.tsx
 import type { EditorConfig, SerializedTextNode, Spread } from "lexical";
 ...
@@ -362,13 +361,13 @@ export class EmojiNode extends TextNode {
 Please check the official [Lexical documentation](https://github.com/facebook/lexical/blob/main/packages/lexical-playground/src/nodes/EmojiNode.tsx) for full example. 
 
 #### Replace Node
-To replace your custom lexical node with a new node, you need to reference the existing node by name, and pass a new node class via the `node` prop:
+To replace your custom Lexical node with a new node, you need to reference the existing node by name, and pass a new node class via the `node` prop:
 ```jsx apps/admin/src/App.tsx
 <Heading.Node name={"emojiNode"} node={MyExtendedEmojiNode} />;
 ```
 
 #### Remove Node
-To remove a lexical node, pass a `remove` prop to the `<Heading.Node>` element:
+To remove a Lexical node, pass a `remove` prop to the `<Heading.Node>` element:
 ```jsx apps/admin/src/App.tsx
 <Heading.Node name={"emojiNode"} remove />
 ```
@@ -396,9 +395,9 @@ To position your nodes, you can use `before` or `after` props on the `<Heading.N
 | HeaderNode | header-element | No | No | Yes |
 | QuoteNode | webiny-quote | No | No | Yes |
 
-## Paragraph Element
+## The Paragraph Element
 
-Paragraph element is used for writing the main page content. It has its own action, plugins, and nodes.
+The Paragraph element is used for writing the main page content. It has its own action, plugins, and nodes.
 
 ### Toolbar
 To customize the toolbar actions, you can utilize our configuration options. You have the ability to add, replace, remove, or position a toolbar action. To learn more, please refer to the topics listed below.
@@ -462,10 +461,10 @@ To position existing or new custom action you can use `before` or `after` props 
 ```
 
 ### Plugins
-You have the ability to add, replace, remove, or position lexical plugins. To learn more, please refer to the topics listed below.
-Please read the [official docs](https://lexical.dev/docs/react/plugins) for more information about the lexical plugins.
+You have the ability to add, replace, remove, or position Lexical plugins. To learn more, please refer to the topics listed below.
+Please read the [official docs](https://lexical.dev/docs/react/plugins) for more information about the Lexical plugins.
 #### Add Plugin
-To add a new lexical plugin, you need to use the `<Paragraph.Plugin>` component and mount it within your Admin app.
+To add a new Lexical plugin, you need to use the `<Paragraph.Plugin>` component and mount it within your Admin app.
 ```jsx apps/admin/src/App.tsx
 {
   /* Use the same CustomFloatingLinkEditorPlugin component from the header element section */
@@ -504,13 +503,13 @@ To position existing or custom plugins you can use `before` or `after` props on 
 
 
 ### Nodes
-You have the ability to add, replace, remove, or position lexical nodes. To learn more, please refer to the topics listed below.
+You have the ability to add, replace, remove, or position Lexical nodes. To learn more, please refer to the topics listed below.
 
 <Alert type={"warning"}>
   Built-in nodes cannot be removed or replaced to avoid existing data corruption. You can only remove or replace your custom nodes, or nodes added by other 3rd party plugins.
 </Alert>
 
-Please read the [official docs](https://lexical.dev/docs/concepts/nodes) for more information about the lexical nodes.
+Please read the [official docs](https://lexical.dev/docs/concepts/nodes) for more information about the Lexical nodes.
 
 #### Add Node
 To add a new lexical node, you need to use the `<Paragraph.Node>` component and mount it within your Admin app. After, pass the node class via the `node` prop.
@@ -522,13 +521,13 @@ To add a new lexical node, you need to use the `<Paragraph.Node>` component and 
 Please check the official [Lexical documentation](https://github.com/facebook/lexical/blob/main/packages/lexical-playground/src/nodes/EmojiNode.tsx) for full example.
 
 #### Replace Node
-To replace your custom lexical node with a new node, you need to reference the existing node by name, and pass a new node class via the `node` prop:
+To replace your custom Lexical node with a new node, you need to reference the existing node by name, and pass a new node class via the `node` prop:
 ```jsx apps/admin/src/App.tsx
 <Paragraph.Node name={"emojiNode"} node={MyExtendedEmojiNode} />;
 ```
 
 #### Remove Node
-To remove a lexical node, pass a `remove` prop to the `<Paragraph.Node>` element:
+To remove a Lexical node, pass a `remove` prop to the `<Paragraph.Node>` element:
 ```jsx apps/admin/src/App.tsx
 <Paragraph.Node name={"emojiNode"} remove />
 ```
