fix: what you will learn section

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
@@ -14,7 +14,7 @@ import { Alert } from "@/components/Alert";
 <CanIUseThis since={"5.37.0"}  />
 
 <WhatYouWillLearn>
-  How to customize the Lexical editor in Page Builder.
+  - How to customize the Lexical editor in Page Builder.
 </WhatYouWillLearn>
 
 ## Overview
@@ -24,7 +24,7 @@ Webiny uses [Lexical Rich Text Editor](https://lexical.dev/) to allow users to c
 To learn more about how Lexical Editor works before starting with the custom configuration with the Webiny, check the [official docs](https://lexical.dev/docs/intro).
 Also, check the [Lexical playground](https://playground.lexical.dev). You can find features that can be implemented into the Webiny apps.
 
-In this article we will cover the Lexical Editor configuration for the heading and paragraph elements. The configuration includes toolbar actions, plugins, and Lexical nodes.
+In this article, we will cover the Lexical Editor configuration for the heading and paragraph elements. The configuration includes toolbar actions, plugins, and Lexical nodes.
 
 <Gallery>
 <Image
