feat: create 5.37.1 release notes

--- a/src/docs/shared/release-notes/5.37.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.1/changelog.mdx
@@ -22,7 +22,7 @@ In a multi-tenant Webiny project, when switching between tenants in the Admin ap
 
 The issue has been resolved. The pages will now be properly filtered based on the current tenant.
 
-### Fixed Deletion Page Revisions  ([#3468](https://github.com/webiny/webiny-js/pull/3468))
+### Fixed Deletion of Page Revisions  ([#3468](https://github.com/webiny/webiny-js/pull/3468))
 
 When deleting a page revision other than the first one, the page would completely disappear from the list of pages in the Admin app. 
 
