--- a/src/docs/shared/release-notes/5.37.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.1/changelog.mdx
@@ -42,7 +42,7 @@ With this release, we've optimized the rendering of large data sets, which shoul
 
 ### Fixed Deployment of the Website Application With an Existing VPC ([#3456](https://github.com/webiny/webiny-js/pull/3456))
 
-When deploying Webiny into [an existing VPC](/docs/{version}/enterprise/use-existing-amazon-vpc) and with [multi-tenancy](/docs/{version}/enterprise/multi-tenancy) enabled, the deployment of the Website application would fail. More specifically, the deployment of the `website-router-origin-request` Lambda@Edge function would fail, because its IAM role was missing the base [`AWSLambdaVPCAccessExecutionRole`](https://docs.aws.amazon.com/aws-managed-policy/latest/reference/AWSLambdaVPCAccessExecutionRole.html) AWS managed policy attached to it.
+When deploying a Webiny project into [an existing VPC](/docs/{version}/enterprise/use-existing-amazon-vpc) and with [multi-tenancy](/docs/{version}/enterprise/multi-tenancy) enabled, the deployment of the Website application would fail. More specifically, the deployment of the `website-router-origin-request` Lambda@Edge function would fail, because its IAM role was missing the base [`AWSLambdaVPCAccessExecutionRole`](https://docs.aws.amazon.com/aws-managed-policy/latest/reference/AWSLambdaVPCAccessExecutionRole.html) AWS managed policy attached to it.
 
 This has now been addressed. 
 
