feat: create 5.37.1 release notes

--- a/src/docs/shared/release-notes/5.37.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.1/changelog.mdx
@@ -34,15 +34,15 @@ With this release, no matter which page revision you delete, the page will remai
 
 ### Optimized Rendering of Large Data Lists ([#3439](https://github.com/webiny/webiny-js/pull/3439))
 
-We've received a couple of reports of the Admin application becoming slow or even unresponsive when rendering large data sets, for example lists of pages or list of Headless CMS content entries.
+We've received a couple of reports of the Admin app becoming slow or even unresponsive when rendering large data sets, for example lists of Page Builder pages or list of Headless CMS content entries.
 
-With this release, we've optimized the rendering of large data sets, which should now be more performant and should not cause the Admin application to become unresponsive.
+With this release, we've optimized the rendering of large data sets, which should now be more performant and should not cause the Admin app to become unresponsive.
 
 ## Deployments
 
-### Fixed Deployment of the Website Application With an Existing VPC ([#3456](https://github.com/webiny/webiny-js/pull/3456))
+### Fixed Deployment of the Website App With an Existing VPC ([#3456](https://github.com/webiny/webiny-js/pull/3456))
 
-When deploying a Webiny project into [an existing VPC](/docs/{version}/enterprise/use-existing-amazon-vpc) and with [multi-tenancy](/docs/{version}/enterprise/multi-tenancy) enabled, the deployment of the Website application would fail. More specifically, the deployment of the `website-router-origin-request` Lambda@Edge function would fail, because its IAM role was missing the base [`AWSLambdaVPCAccessExecutionRole`](https://docs.aws.amazon.com/aws-managed-policy/latest/reference/AWSLambdaVPCAccessExecutionRole.html) AWS managed policy attached to it.
+When deploying a Webiny project into [an existing VPC](/docs/{version}/enterprise/use-existing-amazon-vpc) and with [multi-tenancy](/docs/{version}/enterprise/multi-tenancy) enabled, the deployment of the Website app would fail. More specifically, the deployment of the `website-router-origin-request` Lambda@Edge function would fail, because its IAM role was missing the base [`AWSLambdaVPCAccessExecutionRole`](https://docs.aws.amazon.com/aws-managed-policy/latest/reference/AWSLambdaVPCAccessExecutionRole.html) AWS managed policy attached to it.
 
 This has now been addressed. 
 
