feat: create 5.37.2 release notes

--- a/src/docs/shared/release-notes/5.37.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.2/changelog.mdx
@@ -15,7 +15,7 @@ import pbScrollToElementLink from "./assets/lexical-scroll-to-element-link-x.png
 
 ### Form Field Values Not Updating When Switching Between Page Elements ([#3478](https://github.com/webiny/webiny-js/pull/3478))
 
-With the 5.37.0 release, a regression was introduced that affected the page editor.
+With the [5.37.0 release](/docs/release-notes/5.37.0/changelog), a regression was introduced that affected the page editor.
 
 When switching between page elements in the page editor, in the right sidebar, the form field values would not update to reflect the values of the newly selected element.
 
